--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Lua modules available from this location for use with <a href="http://www.luaroc
 <p><a name="csv"></a><b>csv</b> - A CSV library, for Torch<br/>
 </p><blockquote><p>A CSV read/write library for Torch. <br/>
 
-<font size="-1"><a href="git://github.com/clementfarabet/lua---csv">latest sources</a> | <a href="https://github.com/clementfarabet/lua---csv" target="_blank">project homepage</a> | License: BSD</font></p>
+<font size="-1"><a href="git://github.com/clementfarabet/lua---csv">latest sources</a> | <a href=https://github.com/clementfarabet/lua---csv>project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
 1.0-0:&nbsp;<a href="csv-1.0-0.rockspec">rockspec</a><br/></td></tr>
@@ -60,7 +60,7 @@ Lua modules available from this location for use with <a href="http://www.luaroc
 <p><a name="ffmpeg"></a><b>ffmpeg</b> - An FFMPEG interface for Torch<br/>
 </p><blockquote><p>A simple abstraction class, that uses ffmpeg to encode/decode videos, and represent them as Tensors, in Torch. <br/>
 
-<font size="-1"><a href="git://github.com/clementfarabet/lua---ffmpeg">latest sources</a> | <a href="https://github.com/clementfarabet/lua---ffmpeg" target="_blank">project homepage</a> | License: BSD</font></p>
+<font size="-1"><a href="git://github.com/clementfarabet/lua---ffmpeg">latest sources</a> | <a href=https://github.com/clementfarabet/lua---ffmpeg>project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
 1.0-0:&nbsp;<a href="ffmpeg-1.0-0.rockspec">rockspec</a><br/></td></tr>
@@ -69,7 +69,7 @@ Lua modules available from this location for use with <a href="http://www.luaroc
 <p><a name="gm"></a><b>gm</b> - A graphical model library for Torch<br/>
 </p><blockquote><p>This package provides routines to create graphical models, and perform common operations on them: decoding, inference, and parameter estimation. <br/>
 
-<font size="-1"><a href="git://github.com/clementfarabet/lua---gm">latest sources</a> | <a href="https://github.com/clementfarabet/lua---gm" target="_blank">project homepage</a> | License: BSD</font></p>
+<font size="-1"><a href="git://github.com/clementfarabet/lua---gm">latest sources</a> | <a href=https://github.com/clementfarabet/lua---gm>project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
 1.0-0:&nbsp;<a href="gm-1.0-0.rockspec">rockspec</a><br/></td></tr>
@@ -78,7 +78,7 @@ Lua modules available from this location for use with <a href="http://www.luaroc
 <p><a name="image"></a><b>image</b> - An image library for Torch<br/>
 </p><blockquote><p>This package provides routines to load/save and manipulate images using Torch's Tensor data structure. <br/>
 
-<font size="-1"><a href="git://github.com/clementfarabet/lua---image">latest sources</a> | <a href="https://github.com/clementfarabet/lua---image" target="_blank">project homepage</a> | License: BSD</font></p>
+<font size="-1"><a href="git://github.com/clementfarabet/lua---image">latest sources</a> | <a href=https://github.com/clementfarabet/lua---image>project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
 1.0-0:&nbsp;<a href="image-1.0-0.rockspec">rockspec</a><br/></td></tr>
@@ -87,7 +87,7 @@ Lua modules available from this location for use with <a href="http://www.luaroc
 <p><a name="imgraph"></a><b>imgraph</b> - An image/graph library for Torch<br/>
 </p><blockquote><p>This package provides routines to construct graphs on images, segment them, build trees out of them, and convert them back to images. <br/>
 
-<font size="-1"><a href="git://github.com/clementfarabet/lua---imgraph">latest sources</a> | <a href="https://github.com/clementfarabet/lua---imgraph" target="_blank">project homepage</a> | License: GPL</font></p>
+<font size="-1"><a href="git://github.com/clementfarabet/lua---imgraph">latest sources</a> | <a href=https://github.com/clementfarabet/lua---imgraph>project homepage</a> | License: GPL</font></p>
 </blockquote></a></td>
 <td class="version">
 1.0-0:&nbsp;<a href="imgraph-1.0-0.rockspec">rockspec</a><br/></td></tr>
@@ -96,7 +96,7 @@ Lua modules available from this location for use with <a href="http://www.luaroc
 <p><a name="json"></a><b>json</b> - A JSON library, modified from JSON4Lua, for Torch<br/>
 </p><blockquote><p>A JSON read/write library for Torch. <br/>
 
-<font size="-1"><a href="git://github.com/clementfarabet/lua---json">latest sources</a> | <a href="https://github.com/clementfarabet/lua---json" target="_blank">project homepage</a> | License: BSD</font></p>
+<font size="-1"><a href="git://github.com/clementfarabet/lua---json">latest sources</a> | <a href=https://github.com/clementfarabet/lua---json>project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
 1.0-0:&nbsp;<a href="json-1.0-0.rockspec">rockspec</a><br/></td></tr>
@@ -105,7 +105,7 @@ Lua modules available from this location for use with <a href="http://www.luaroc
 <p><a name="mattorch"></a><b>mattorch</b> - An interface between Matlab and Torch<br/>
 </p><blockquote><p>A two-way interface between Matlab and Torch. Supports all Matrix types in Matlab, as long as they have an equivalent in Torch. <br/>
 
-<font size="-1"><a href="git://github.com/clementfarabet/lua---mattorch">latest sources</a> | <a href="https://github.com/clementfarabet/lua---mattorch" target="_blank">project homepage</a> | License: BSD</font></p>
+<font size="-1"><a href="git://github.com/clementfarabet/lua---mattorch">latest sources</a> | <a href=https://github.com/clementfarabet/lua---mattorch>project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
 1.0-0:&nbsp;<a href="mattorch-1.0-0.rockspec">rockspec</a><br/></td></tr>
@@ -114,7 +114,7 @@ Lua modules available from this location for use with <a href="http://www.luaroc
 <p><a name="nnx"></a><b>nnx</b> - A completely unstable and experimental package that extends Torch's builtin nn library<br/>
 </p><blockquote><p>This is an experimental package that extends nn. You've be warned! <br/>
 
-<font size="-1"><a href="git://github.com/clementfarabet/lua---nnx">latest sources</a> | <a href="https://github.com/clementfarabet/lua---nnx" target="_blank">project homepage</a> | License: BSD</font></p>
+<font size="-1"><a href="git://github.com/clementfarabet/lua---nnx">latest sources</a> | <a href=https://github.com/clementfarabet/lua---nnx>project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
 0.1-0:&nbsp;<a href="nnx-0.1-0.rockspec">rockspec</a><br/></td></tr>
@@ -123,7 +123,7 @@ Lua modules available from this location for use with <a href="http://www.luaroc
 <p><a name="optim"></a><b>optim</b> - An optimization library for Torch.<br/>
 </p><blockquote><p>This package contains several optimization routines for Torch. <br/>
 
-<font size="-1"><a href="git://github.com/koraykv/optim">latest sources</a> | <a href="https://github.com/koraykv/optim" target="_blank">project homepage</a> | License: BSD</font></p>
+<font size="-1"><a href="git://github.com/koraykv/optim">latest sources</a> | <a href=https://github.com/koraykv/optim>project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
 1.0-0:&nbsp;<a href="optim-1.0-0.rockspec">rockspec</a><br/></td></tr>
@@ -132,7 +132,7 @@ Lua modules available from this location for use with <a href="http://www.luaroc
 <p><a name="parallel"></a><b>parallel</b> - A package to easily fork processes, for Torch<br/>
 </p><blockquote><p>A package to fork and serialize data between multiple processes. <br/>
 
-<font size="-1"><a href="git://github.com/clementfarabet/lua---parallel">latest sources</a> | <a href="https://github.com/clementfarabet/lua---parallel" target="_blank">project homepage</a> | License: BSD</font></p>
+<font size="-1"><a href="git://github.com/clementfarabet/lua---parallel">latest sources</a> | <a href=https://github.com/clementfarabet/lua---parallel>project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
 1.0-0:&nbsp;<a href="parallel-1.0-0.rockspec">rockspec</a><br/></td></tr>
@@ -141,7 +141,7 @@ Lua modules available from this location for use with <a href="http://www.luaroc
 <p><a name="sys"></a><b>sys</b> - A system library for Torch<br/>
 </p><blockquote><p>Provides system functionalities for Torch. <br/>
 
-<font size="-1"><a href="git://github.com/clementfarabet/lua---sys">latest sources</a> | <a href="https://github.com/clementfarabet/lua---sys" target="_blank">project homepage</a> | License: BSD</font></p>
+<font size="-1"><a href="git://github.com/clementfarabet/lua---sys">latest sources</a> | <a href=https://github.com/clementfarabet/lua---sys>project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
 1.0-0:&nbsp;<a href="sys-1.0-0.rockspec">rockspec</a><br/></td></tr>
@@ -150,7 +150,7 @@ Lua modules available from this location for use with <a href="http://www.luaroc
 <p><a name="torch"></a><b>torch</b> - Torch<br/>
 </p><blockquote><p>Torch7 provides a Matlab-like environment for state-of-the-art machine learning algorithms. It is easy to use and provides a very efficient implementation, thanks to an easy and fast scripting language (Lua) and a underlying C implementation. <br/>
 
-<font size="-1"><a href="git://github.com/andresy/torch.git">latest sources</a> | <a href="http://www.torch.ch" target="_blank">project homepage</a> | License: BSD</font></p>
+<font size="-1"><a href="git://github.com/andresy/torch.git">latest sources</a> | <a href=http://www.torch.ch>project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
 7.0.1-0:&nbsp;<a href="torch-7.0.1-0.rockspec">rockspec</a><br/>7.0-0:&nbsp;<a href="torch-7.0-0.rockspec">rockspec</a><br/></td></tr>
@@ -159,7 +159,7 @@ Lua modules available from this location for use with <a href="http://www.luaroc
 <p><a name="torchffi"></a><b>torchffi</b> - Enables FFI bindings for Torch<br/>
 </p><blockquote><p>Enables FFI bindings for Torch (Tensor). It requires Torch to be built with LuaJIT. <br/>
 
-<font size="-1"><a href="git://github.com/clementfarabet/torchffi">latest sources</a> | <a href="https://github.com/clementfarabet/torchffi" target="_blank">project homepage</a> | License: BSD</font></p>
+<font size="-1"><a href="git://github.com/clementfarabet/torchffi">latest sources</a> | <a href=https://github.com/clementfarabet/torchffi>project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
 1.0-0:&nbsp;<a href="torchffi-1.0-0.rockspec">rockspec</a><br/></td></tr>
@@ -168,16 +168,16 @@ Lua modules available from this location for use with <a href="http://www.luaroc
 <p><a name="videograph"></a><b>videograph</b> - A video/graph library for Torch<br/>
 </p><blockquote><p>This package provides routines to construct graphs on videos, segment them, build trees out of them, and convert them back to videos. <br/>
 
-<font size="-1"><a href="git://github.com/clementfarabet/videograph">latest sources</a> | <a href="https://github.com/clementfarabet/videograph" target="_blank">project homepage</a> | License: GPL</font></p>
+<font size="-1"><a href="git://github.com/clementfarabet/videograph">latest sources</a> | <a href=https://github.com/clementfarabet/videograph>project homepage</a> | License: GPL</font></p>
 </blockquote></a></td>
 <td class="version">
 1.0-0:&nbsp;<a href="videograph-1.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
-<p><a name="xlua"></a><b>xlua</b> - Extra Lua functions.<br/>
-</p><blockquote><p>Lua is pretty compact in terms of built-in functionalities: this package extends the table and string libraries, and provide other general purpose tools (progress bar, ...). <br/>
+<p><a name="xlua"></a><b>xlua</b> - Some extensions to the basic Lua packages<br/>
+</p><blockquote><p>Some extensions to the basic Lua packages. <br/>
 
-<font size="-1"><a href="git://github.com/clementfarabet/lua---xlua">latest sources</a> | <a href="https://github.com/clementfarabet/lua---xlua" target="_blank">project homepage</a> | License: BSD</font></p>
+<font size="-1"><a href="git://github.com/clementfarabet/lua---xlua">latest sources</a> | <a href=https://github.com/clementfarabet/lua---xlua>project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
 1.0-0:&nbsp;<a href="xlua-1.0-0.rockspec">rockspec</a><br/></td></tr>
