--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@ Lua modules available from this location for use with <a href="http://www.luaroc
 1.0-0:&nbsp;<a href="videograph-1.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
-<p><a name="xlua"></a><b>xlua</b> - Some extensions to the basic Lua packages<br/>
-</p><blockquote><p>Some extensions to the basic Lua packages. <br/>
+<p><a name="xlua"></a><b>xlua</b> - Extra Lua functions.<br/>
+</p><blockquote><p>Lua is pretty compact in terms of built-in functionalities: this package extends the table and string libraries, and provide other general purpose tools (progress bar, ...). <br/>
 
 <font size="-1"><a href="git://github.com/clementfarabet/lua---xlua">latest sources</a> | <a href=https://github.com/clementfarabet/lua---xlua>project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
