--- a/index.html
+++ b/index.html
@@ -66,6 +66,15 @@ Lua modules available from this location for use with <a href="http://www.luaroc
 1.0-0:&nbsp;<a href="ffmpeg-1.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="fs"></a><b>fs</b> - File system toolbox<br/>
+</p><blockquote><p><br/>
+
+<font size="-1"><a href="git://github.com/clementfarabet/lua-fs-0.3.git">latest sources</a> | <a href=https://github.com/clementfarabet/lua-fs-0.3>project homepage</a> | License: N/A</font></p>
+</blockquote></a></td>
+<td class="version">
+0.3-0:&nbsp;<a href="fs-0.3-0.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="gm"></a><b>gm</b> - A graphical model library for Torch<br/>
 </p><blockquote><p>This package provides routines to create graphical models, and perform common operations on them: decoding, inference, and parameter estimation. <br/>
 
@@ -163,6 +172,15 @@ Lua modules available from this location for use with <a href="http://www.luaroc
 </blockquote></a></td>
 <td class="version">
 1.0-0:&nbsp;<a href="torchffi-1.0-0.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
+<p><a name="underscore"></a><b>underscore</b> - Underscore is a utility-belt library for Lua<br/>
+</p><blockquote><p> underscore-lua is a utility-belt library for Lua that provides a lot of the functional programming support that you would expect in or Ruby's Enumerable. <br/>
+
+<font size="-1"><a href="git://github.com/clementfarabet/underscore-lua.git">latest sources</a> | <a href=http://jtarchie.github.com/underscore-lua/>project homepage</a> | License: MIT</font></p>
+</blockquote></a></td>
+<td class="version">
+dev-1:&nbsp;<a href="underscore-dev-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
 <p><a name="videograph"></a><b>videograph</b> - A video/graph library for Torch<br/>
