--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@ Lua modules available from this location for use with <a href="http://www.luaroc
 </p>
 <table class="main">
 <td class="package">
+<p><a name="camera"></a><b>camera</b> - A simple wrapper package to give torch access to a webcam<br/>
+</p><blockquote><p>Uses OpenCV on MacOS and video4linux2 on Linux to proved the low level access to the camera hardware. <br/>
+
+<font size="-1"><a href="git://github.com/clementfarabet/lua---camera">latest sources</a> | <a href=https://github.com/clementfarabet/lua---camera>project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+1.0-0:&nbsp;<a href="camera-1.0-0.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="csv"></a><b>csv</b> - A CSV library, for Torch<br/>
 </p><blockquote><p>A CSV read/write library for Torch. <br/>
 
@@ -100,6 +109,15 @@ Lua modules available from this location for use with <a href="http://www.luaroc
 </blockquote></a></td>
 <td class="version">
 1.0-0:&nbsp;<a href="imgraph-1.0-0.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
+<p><a name="inline-c"></a><b>inline-c</b> - A package to dynamically build and run C from within Lua<br/>
+</p><blockquote><p>Each function gets wrapped in it own little lua library which is then made accessible to the Lua runtime. <br/>
+
+<font size="-1"><a href="git://github.com/clementfarabet/lua---inline-C">latest sources</a> | <a href=https://github.com/clementfarabet/lua---inline-C>project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+1.0-0:&nbsp;<a href="inline-c-1.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
 <p><a name="json"></a><b>json</b> - A JSON library, modified from JSON4Lua, for Torch<br/>
