--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ Lua modules available from this location for use with <a href="http://www.luaroc
 <font size="-1"><a href="git://github.com/clementfarabet/lua---nnx">latest sources</a> | <a href=https://github.com/clementfarabet/lua---nnx>project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
-0.1-0:&nbsp;<a href="nnx-0.1-0.rockspec">rockspec</a><br/></td></tr>
+0.1-1:&nbsp;<a href="nnx-0.1-1.rockspec">rockspec</a><br/>0.1-0:&nbsp;<a href="nnx-0.1-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
 <p><a name="optim"></a><b>optim</b> - An optimization library for Torch.<br/>
