--- a/index.html
+++ b/index.html
@@ -93,6 +93,15 @@ Lua modules available from this location for use with <a href="http://www.luaroc
 1.0-0:&nbsp;<a href="gm-1.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="graphicsmagick"></a><b>graphicsmagick</b> - A wrapper to GraphicsMagick (binary).<br/>
+</p><blockquote><p>GraphichsMagick (.org) is a tool to convert images, quite efficiently. This package provides bindings to it. <br/>
+
+<font size="-1"><a href="git://github.com/clementfarabet/graphicsmagick">latest sources</a> | <a href=https://github.com/clementfarabet/graphicsmagick>project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+1.0-0:&nbsp;<a href="graphicsmagick-1.0-0.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="image"></a><b>image</b> - An image library for Torch<br/>
 </p><blockquote><p>This package provides routines to load/save and manipulate images using Torch's Tensor data structure. <br/>
 
