--- a/index.html
+++ b/index.html
@@ -210,6 +210,15 @@ Lua modules available from this location for use with <a href="http://www.luaroc
 dev-1:&nbsp;<a href="underscore-dev-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="unsup"></a><b>unsup</b> - A package for unsupervised learning in Torch<br/>
+</p><blockquote><p>Provides modules that are compatible with nn (LinearPsd, ConvPsd, AutoEncoder, ...), and self-contained algorithms (k-means, PCA). <br/>
+
+<font size="-1"><a href="git://github.com/koraykv/unsup">latest sources</a> | <a href=https://github.com/koraykv/unsup>project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+0.1-0:&nbsp;<a href="unsup-0.1-0.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="videograph"></a><b>videograph</b> - A video/graph library for Torch<br/>
 </p><blockquote><p>This package provides routines to construct graphs on videos, segment them, build trees out of them, and convert them back to videos. <br/>
 
