--- a/index.html
+++ b/index.html
@@ -66,6 +66,15 @@ Lua modules available from this location for use with <a href="http://www.luaroc
 1.0-0:&nbsp;<a href="csv-1.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="fex"></a><b>fex</b> - A package for feature extraction in Torch<br/>
+</p><blockquote><p>Provides SIFT and dSIFT modules. <br/>
+
+<font size="-1"><a href="git://github.com/koraykv/fex">latest sources</a> | <a href=https://github.com/koraykv/fex>project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+0.1-0:&nbsp;<a href="fex-0.1-0.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="ffmpeg"></a><b>ffmpeg</b> - An FFMPEG interface for Torch<br/>
 </p><blockquote><p>A simple abstraction class, that uses ffmpeg to encode/decode videos, and represent them as Tensors, in Torch. <br/>
 
