--- a/index.html
+++ b/index.html
@@ -183,6 +183,15 @@ Lua modules available from this location for use with <a href="http://www.luaroc
 1.0-0:&nbsp;<a href="parallel-1.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="restclient"></a><b>restclient</b> - A REST Client.<br/>
+</p><blockquote><p>A client to REST APIs. <br/>
+
+<font size="-1"><a href="git://github.com/clementfarabet/restclient">latest sources</a> | <a href=https://github.com/clementfarabet/restclient>project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+0.1-0:&nbsp;<a href="restclient-0.1-0.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="sys"></a><b>sys</b> - A system library for Torch<br/>
 </p><blockquote><p>Provides system functionalities for Torch. <br/>
 
