Got rid of torch alpha. Cant work with the current master.

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ Lua modules available from this location for use with <a href="http://www.luaroc
 <font size="-1"><a href="git://github.com/andresy/torch.git">latest sources</a> | <a href=http://www.torch.ch>project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
-7.1alpha-0:&nbsp;<a href="torch-7.1alpha-0.rockspec">rockspec</a><br/>7.0.3-0:&nbsp;<a href="torch-7.0.3-0.rockspec">rockspec</a><br/>7.0.2-0:&nbsp;<a href="torch-7.0.2-0.rockspec">rockspec</a><br/>7.0.1-0:&nbsp;<a href="torch-7.0.1-0.rockspec">rockspec</a><br/>7.0-0:&nbsp;<a href="torch-7.0-0.rockspec">rockspec</a><br/></td></tr>
+7.0.3-0:&nbsp;<a href="torch-7.0.3-0.rockspec">rockspec</a><br/>7.0.2-0:&nbsp;<a href="torch-7.0.2-0.rockspec">rockspec</a><br/>7.0.1-0:&nbsp;<a href="torch-7.0.1-0.rockspec">rockspec</a><br/>7.0-0:&nbsp;<a href="torch-7.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
 <p><a name="torchffi"></a><b>torchffi</b> - Enables FFI bindings for Torch<br/>
