--- a/index.html
+++ b/index.html
@@ -219,6 +219,15 @@ Lua modules available from this location for use with <a href="http://www.luaroc
 1.0-0:&nbsp;<a href="torchffi-1.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="trepl"></a><b>trepl</b> - An embedabble, Lua-only REPL for Torch.<br/>
+</p><blockquote><p>An embedabble, Lua-only REPL for Torch. <br/>
+
+<font size="-1"><a href="git://github.com/clementfarabet/trepl">latest sources</a> | <a href=https://github.com/clementfarabet/trepl>project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="trepl-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="underscore"></a><b>underscore</b> - Underscore is a utility-belt library for Lua<br/>
 </p><blockquote><p> underscore-lua is a utility-belt library for Lua that provides a lot of the functional programming support that you would expect in or Ruby's Enumerable. <br/>
 
