--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ Lua modules available from this location for use with <a href="http://www.luaroc
 <font size="-1"><a href="git://github.com/koraykv/optim">latest sources</a> | <a href=https://github.com/koraykv/optim>project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
-1.0.2-0:&nbsp;<a href="optim-1.0.2-0.rockspec">rockspec</a><br/>1.0.1-0:&nbsp;<a href="optim-1.0.1-0.rockspec">rockspec</a><br/>1.0-0:&nbsp;<a href="optim-1.0-0.rockspec">rockspec</a><br/></td></tr>
+1.0.3-0:&nbsp;<a href="optim-1.0.3-0.rockspec">rockspec</a><br/>1.0.2-0:&nbsp;<a href="optim-1.0.2-0.rockspec">rockspec</a><br/>1.0.1-0:&nbsp;<a href="optim-1.0.1-0.rockspec">rockspec</a><br/>1.0-0:&nbsp;<a href="optim-1.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
 <p><a name="parallel"></a><b>parallel</b> - A package to easily fork processes, for Torch<br/>
