--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ Lua modules available from this location for use with <a href="http://www.luaroc
 <font size="-1"><a href="git://github.com/clementfarabet/graphicsmagick">latest sources</a> | <a href="https://github.com/clementfarabet/graphicsmagick" target="_blank">project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
-1.0.0-0:&nbsp;<a href="graphicsmagick-1.0.0-0.rockspec">rockspec</a><br/></td></tr>
+1.scm-0:&nbsp;<a href="graphicsmagick-1.scm-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
 <p><a name="image"></a><b>image</b> - An image library for Torch<br/>
