--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@ Lua modules available from this location for use with <a href="http://www.luaroc
 <p><a name="image"></a><b>image</b> - An image library for Torch<br/>
 </p><blockquote><p>This package provides routines to load/save and manipulate images using Torch's Tensor data structure. <br/>
 
-<font size="-1"><a href="git://github.com/clementfarabet/lua---image">latest sources</a> | <a href="https://github.com/clementfarabet/lua---image" target="_blank">project homepage</a> | License: BSD</font></p>
+<font size="-1"><a href="git://github.com/torch/image">latest sources</a> | <a href="https://github.com/torch/image" target="_blank">project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
-1.1.alpha-0:&nbsp;<a href="image-1.1.alpha-0.rockspec">rockspec</a><br/>1.0.1-0:&nbsp;<a href="image-1.0.1-0.rockspec">rockspec</a><br/>1.0-0:&nbsp;<a href="image-1.0-0.rockspec">rockspec</a><br/></td></tr>
+1.1.alpha-0:&nbsp;<a href="image-1.1.alpha-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
 <p><a name="imgraph"></a><b>imgraph</b> - An image/graph library for Torch<br/>
@@ -177,10 +177,10 @@ Lua modules available from this location for use with <a href="http://www.luaroc
 <p><a name="optim"></a><b>optim</b> - An optimization library for Torch.<br/>
 </p><blockquote><p>This package contains several optimization routines for Torch. <br/>
 
-<font size="-1"><a href="git://github.com/koraykv/optim">latest sources</a> | <a href="https://github.com/koraykv/optim" target="_blank">project homepage</a> | License: BSD</font></p>
+<font size="-1"><a href="git://github.com/torch/optim">latest sources</a> | <a href="https://github.com/torch/optim" target="_blank">project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
-1.0.3-0:&nbsp;<a href="optim-1.0.3-0.rockspec">rockspec</a><br/>1.0.2-0:&nbsp;<a href="optim-1.0.2-0.rockspec">rockspec</a><br/>1.0.1-0:&nbsp;<a href="optim-1.0.1-0.rockspec">rockspec</a><br/>1.0-0:&nbsp;<a href="optim-1.0-0.rockspec">rockspec</a><br/></td></tr>
+1.0.3-0:&nbsp;<a href="optim-1.0.3-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
 <p><a name="parallel"></a><b>parallel</b> - A package to easily fork processes, for Torch<br/>
@@ -204,7 +204,7 @@ Lua modules available from this location for use with <a href="http://www.luaroc
 <p><a name="sys"></a><b>sys</b> - A system library for Torch<br/>
 </p><blockquote><p>Provides system functionalities for Torch. <br/>
 
-<font size="-1"><a href="git://github.com/clementfarabet/lua---sys">latest sources</a> | <a href="https://github.com/clementfarabet/lua---sys" target="_blank">project homepage</a> | License: BSD</font></p>
+<font size="-1"><a href="git://github.com/torch/sys">latest sources</a> | <a href="https://github.com/torch/sys" target="_blank">project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
 1.0-0:&nbsp;<a href="sys-1.0-0.rockspec">rockspec</a><br/></td></tr>
@@ -231,7 +231,7 @@ Lua modules available from this location for use with <a href="http://www.luaroc
 <p><a name="trepl"></a><b>trepl</b> - An embedabble, Lua-only REPL for Torch.<br/>
 </p><blockquote><p>An embedabble, Lua-only REPL for Torch. <br/>
 
-<font size="-1"><a href="git://github.com/clementfarabet/trepl">latest sources</a> | <a href="https://github.com/clementfarabet/trepl" target="_blank">project homepage</a> | License: BSD</font></p>
+<font size="-1"><a href="git://github.com/torch/trepl">latest sources</a> | <a href="https://github.com/torch/trepl" target="_blank">project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
 scm-1:&nbsp;<a href="trepl-scm-1.rockspec">rockspec</a><br/></td></tr>
@@ -267,7 +267,7 @@ dev-1:&nbsp;<a href="underscore-dev-1.rockspec">rockspec</a><br/></td></tr>
 <p><a name="xlua"></a><b>xlua</b> - Extra Lua functions.<br/>
 </p><blockquote><p>Lua is pretty compact in terms of built-in functionalities: this package extends the table and string libraries, and provide other general purpose tools (progress bar, ...). <br/>
 
-<font size="-1"><a href="git://github.com/clementfarabet/lua---xlua">latest sources</a> | <a href="https://github.com/clementfarabet/lua---xlua" target="_blank">project homepage</a> | License: BSD</font></p>
+<font size="-1"><a href="git://github.com/torch/xlua">latest sources</a> | <a href="https://github.com/torch/xlua" target="_blank">project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
 1.0-0:&nbsp;<a href="xlua-1.0-0.rockspec">rockspec</a><br/></td></tr>
