--- a/index.html
+++ b/index.html
@@ -222,10 +222,10 @@ Lua modules available from this location for use with <a href="http://www.luaroc
 <p><a name="torchffi"></a><b>torchffi</b> - Enables FFI bindings for Torch<br/>
 </p><blockquote><p>Enables FFI bindings for Torch (Tensor). It requires Torch to be built with LuaJIT. <br/>
 
-<font size="-1"><a href="git://github.com/clementfarabet/torchffi">latest sources</a> | <a href="https://github.com/clementfarabet/torchffi" target="_blank">project homepage</a> | License: BSD</font></p>
+<font size="-1"><a href="git://github.com/torch/ffi">latest sources</a> | <a href="https://github.com/torch/ffi" target="_blank">project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
-1.1.alpha-0:&nbsp;<a href="torchffi-1.1.alpha-0.rockspec">rockspec</a><br/>1.0-0:&nbsp;<a href="torchffi-1.0-0.rockspec">rockspec</a><br/></td></tr>
+1.1.alpha-0:&nbsp;<a href="torchffi-1.1.alpha-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
 <p><a name="trepl"></a><b>trepl</b> - An embedabble, Lua-only REPL for Torch.<br/>
