--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ Lua modules available from this location for use with <a href="http://www.luaroc
 <font size="-1"><a href="git://github.com/torch/image">latest sources</a> | <a href="https://github.com/torch/image" target="_blank">project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
-1.1.alpha-0:&nbsp;<a href="image-1.1.alpha-0.rockspec">rockspec</a><br/></td></tr>
+1.1.alpha-0:&nbsp;<a href="image-1.1.alpha-0.rockspec">rockspec</a><br/>1.0.1-0:&nbsp;<a href="image-1.0.1-0.rockspec">rockspec</a><br/>1.0-0:&nbsp;<a href="image-1.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
 <p><a name="imgraph"></a><b>imgraph</b> - An image/graph library for Torch<br/>
