--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@ Lua modules available from this location for use with <a href="http://www.luaroc
 </p>
 <table class="main">
 <td class="package">
+<p><a name="audio"></a><b>audio</b> - Audio library for Torch-7<br/>
+</p><blockquote><p> Support audio I/O (Load files) Common audio operations (Short-time Fourier transforms, Spectrograms) <br/>
+<p><b>External dependencies:</b> libfftw3,&nbsp;libsox</p>
+<font size="-1"><a href="git://github.com/soumith/lua---audio">latest sources</a> | <a href="https://github.com/soumith/lua---audio" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+0.1-0:&nbsp;<a href="audio-0.1-0.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="camera"></a><b>camera</b> - A simple wrapper package to give torch access to a webcam<br/>
 </p><blockquote><p>Uses OpenCV on MacOS and video4linux2 on Linux to proved the low level access to the camera hardware. <br/>
 
