--- a/index.html
+++ b/index.html
@@ -177,10 +177,10 @@ Lua modules available from this location for use with <a href="http://www.luaroc
 <p><a name="optim"></a><b>optim</b> - An optimization library for Torch.<br/>
 </p><blockquote><p>This package contains several optimization routines for Torch. <br/>
 
-<font size="-1"><a href="git://github.com/koraykv/optim">latest sources</a> | <a href="https://github.com/koraykv/optim" target="_blank">project homepage</a> | License: BSD</font></p>
+<font size="-1"><a href="git://github.com/torch/optim">latest sources</a> | <a href="https://github.com/torch/optim" target="_blank">project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
-1.0.3-0:&nbsp;<a href="optim-1.0.3-0.rockspec">rockspec</a><br/>1.0.2-0:&nbsp;<a href="optim-1.0.2-0.rockspec">rockspec</a><br/>1.0.1-0:&nbsp;<a href="optim-1.0.1-0.rockspec">rockspec</a><br/>1.0-0:&nbsp;<a href="optim-1.0-0.rockspec">rockspec</a><br/></td></tr>
+1.0.3-1:&nbsp;<a href="optim-1.0.3-1.rockspec">rockspec</a><br/>1.0.3-0:&nbsp;<a href="optim-1.0.3-0.rockspec">rockspec</a><br/>1.0.2-0:&nbsp;<a href="optim-1.0.2-0.rockspec">rockspec</a><br/>1.0.1-0:&nbsp;<a href="optim-1.0.1-0.rockspec">rockspec</a><br/>1.0-0:&nbsp;<a href="optim-1.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
 <p><a name="parallel"></a><b>parallel</b> - A package to easily fork processes, for Torch<br/>
