--- a/index.html
+++ b/index.html
@@ -201,6 +201,15 @@ Lua modules available from this location for use with <a href="http://www.luaroc
 1.0-0:&nbsp;<a href="parallel-1.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="persist"></a><b>persist</b> - A persisting table, built on Redis.<br/>
+</p><blockquote><p>A persisting table, built on Redis. <br/>
+
+<font size="-1"><a href="git://github.com/clementfarabet/persist">latest sources</a> | <a href="https://github.com/clementfarabet/persist" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-0:&nbsp;<a href="persist-scm-0.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="restclient"></a><b>restclient</b> - A REST Client.<br/>
 </p><blockquote><p>A client to REST APIs. <br/>
 
