--- a/index.html
+++ b/index.html
@@ -210,6 +210,15 @@ Lua modules available from this location for use with <a href="http://www.luaroc
 scm-0:&nbsp;<a href="persist-scm-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="python"></a><b>python</b> - A wrapper to Python<br/>
+</p><blockquote><p>Load a Python env into Lua. <br/>
+
+<font size="-1"><a href="git://github.com/clementfarabet/lua---python">latest sources</a> | <a href="https://github.com/clementfarabet/lua---python" target="_blank">project homepage</a> | License: GPL</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-0:&nbsp;<a href="python-scm-0.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="restclient"></a><b>restclient</b> - A REST Client.<br/>
 </p><blockquote><p>A client to REST APIs. <br/>
 
