Added async rockspec

--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@ Lua modules available from this location for use with <a href="http://www.luaroc
 </p>
 <table class="main">
 <td class="package">
+<p><a name="async"></a><b>async</b> - An async framework for Torch (based on LibUV)<br/>
+</p><blockquote><p>Async framework for Torch, based on LibUV. <br/>
+
+<font size="-1"><a href="git://github.com/clementfarabet/async">latest sources</a> | <a href="https://github.com/clementfarabet/async" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="async-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="audio"></a><b>audio</b> - Audio library for Torch-7<br/>
 </p><blockquote><p> Support audio I/O (Load files) Common audio operations (Short-time Fourier transforms, Spectrograms) <br/>
 <p><b>External dependencies:</b> libfftw3,&nbsp;libsox</p>
