--- a/index.html
+++ b/index.html
@@ -120,6 +120,15 @@ scm-1:&nbsp;<a href="async-scm-1.rockspec">rockspec</a><br/></td></tr>
 0.3-0:&nbsp;<a href="fs-0.3-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="gfx.js"></a><b>gfx.js</b> - A graphics backend for the browser, with a Torch7 client.<br/>
+</p><blockquote><p>A graphics backend for the browser, with a Torch7 client. <br/>
+
+<font size="-1"><a href="git://github.com/clementfarabet/gfx.js">latest sources</a> | <a href="https://github.com/clementfarabet/gfx.js" target="_blank">project homepage</a> | License: MIT</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-0:&nbsp;<a href="gfx.js-scm-0.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="gm"></a><b>gm</b> - A graphical model library for Torch<br/>
 </p><blockquote><p>This package provides routines to create graphical models, and perform common operations on them: decoding, inference, and parameter estimation. <br/>
 
@@ -172,6 +181,15 @@ scm-1:&nbsp;<a href="async-scm-1.rockspec">rockspec</a><br/></td></tr>
 </blockquote></a></td>
 <td class="version">
 1.0-0:&nbsp;<a href="json-1.0-0.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
+<p><a name="manifold"></a><b>manifold</b> - A package to manipulate manifolds<br/>
+</p><blockquote><p>A package to manipulate manifolds. <br/>
+
+<font size="-1"><a href="git://github.com/clementfarabet/manifold">latest sources</a> | <a href="https://github.com/clementfarabet/manifold" target="_blank">project homepage</a> | License: MIT</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-0:&nbsp;<a href="manifold-scm-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
 <p><a name="mattorch"></a><b>mattorch</b> - An interface between Matlab and Torch<br/>
