--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@ scm-0:&nbsp;<a href="gfx.js-scm-0.rockspec">rockspec</a><br/></td></tr>
 <p><a name="gm"></a><b>gm</b> - A graphical model library for Torch<br/>
 </p><blockquote><p>This package provides routines to create graphical models, and perform common operations on them: decoding, inference, and parameter estimation. <br/>
 
-<font size="-1"><a href="git://github.com/clementfarabet/lua---gm">latest sources</a> | <a href="https://github.com/clementfarabet/lua---gm" target="_blank">project homepage</a> | License: BSD</font></p>
+<font size="-1"><a href="git://github.com/clementfarabet/gm">latest sources</a> | <a href="https://github.com/clementfarabet/gm" target="_blank">project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
-1.0-0:&nbsp;<a href="gm-1.0-0.rockspec">rockspec</a><br/></td></tr>
+scm-1:&nbsp;<a href="gm-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
 <p><a name="graphicsmagick"></a><b>graphicsmagick</b> - A wrapper to GraphicsMagick (binary).<br/>
