--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ scm-0:&nbsp;<a href="python-scm-0.rockspec">rockspec</a><br/></td></tr>
 <font size="-1"><a href="git://github.com/torch/sys">latest sources</a> | <a href="https://github.com/torch/sys" target="_blank">project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
-1.0-0:&nbsp;<a href="sys-1.0-0.rockspec">rockspec</a><br/></td></tr>
+1.1-0:&nbsp;<a href="sys-1.1-0.rockspec">rockspec</a><br/>1.0-0:&nbsp;<a href="sys-1.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
 <p><a name="torch"></a><b>torch</b> - Torch<br/>
