New rock for Cephes mathematical functions library
As discussed with @clementfarabet in andresy/torch-rocks#5

--- a/index.html
+++ b/index.html
@@ -75,6 +75,15 @@ scm-1:&nbsp;<a href="async-scm-1.rockspec">rockspec</a><br/></td></tr>
 1.0-0:&nbsp;<a href="camera-1.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="cephes"></a><b>cephes</b> - Cephes mathematical functions library, wrapped for Torch<br/>
+</p><blockquote><p><br/>
+
+<font size="-1"><a href="git://github.com/jucor/torch-cephes.git">latest sources</a> | <a href="https://github.com/jucor/torch-cephes" target="_blank">project homepage</a> | License: N/A</font></p>
+</blockquote></a></td>
+<td class="version">
+0-0:&nbsp;<a href="cephes-0-0.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="csv"></a><b>csv</b> - A CSV library, for Torch<br/>
 </p><blockquote><p>A CSV read/write library for Torch. <br/>
 
