--- a/index.html
+++ b/index.html
@@ -318,6 +318,15 @@ dev-1:&nbsp;<a href="underscore-dev-1.rockspec">rockspec</a><br/></td></tr>
 0.1-0:&nbsp;<a href="unsup-0.1-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="utf8"></a><b>utf8</b> - Basic UTF-8 support.<br/>
+</p><blockquote><p>Basic UTF-8 support. <br/>
+
+<font size="-1"><a href="git://github.com/clementfarabet/lua-utf8">latest sources</a> | <a href="https://github.com/clementfarabet/lua-utf8" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="utf8-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="videograph"></a><b>videograph</b> - A video/graph library for Torch<br/>
 </p><blockquote><p>This package provides routines to construct graphs on videos, segment them, build trees out of them, and convert them back to videos. <br/>
 
