added rockspecs from torch7-split

--- a/index.html
+++ b/index.html
@@ -93,6 +93,15 @@ scm-1:&nbsp;<a href="async-scm-1.rockspec">rockspec</a><br/></td></tr>
 1.0-0:&nbsp;<a href="csv-1.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="cunn"></a><b>cunn</b> - Torch CUDA Neural Network Implementation<br/>
+</p><blockquote><p> <br/>
+
+<font size="-1"><a href="git://github.com/torch/cunn.git">latest sources</a> | <a href="https://github.com/torch/cunn" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="cunn-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="curl"></a><b>curl</b> - An interface to CURL.<br/>
 </p><blockquote><p>An interface to CURL. <br/>
 
@@ -100,6 +109,33 @@ scm-1:&nbsp;<a href="async-scm-1.rockspec">rockspec</a><br/></td></tr>
 </blockquote></a></td>
 <td class="version">
 0.1-0:&nbsp;<a href="curl-0.1-0.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
+<p><a name="cutorch"></a><b>cutorch</b> - Torch CUDA Implementation<br/>
+</p><blockquote><p> <br/>
+
+<font size="-1"><a href="git://github.com/torch/cutorch.git">latest sources</a> | <a href="https://github.com/torch/cutorch" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="cutorch-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
+<p><a name="cwrap"></a><b>cwrap</b> - Advanced automatic wrapper for C functions<br/>
+</p><blockquote><p> <br/>
+
+<font size="-1"><a href="git://github.com/torch/cwrap.git">latest sources</a> | <a href="https://github.com/torch/cwrap" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="cwrap-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
+<p><a name="dok"></a><b>dok</b> - Support for the old torch7 dok system<br/>
+</p><blockquote><p> <br/>
+
+<font size="-1"><a href="git://github.com/torch/dok.git">latest sources</a> | <a href="https://github.com/torch/dok" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="dok-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
 <p><a name="fex"></a><b>fex</b> - A package for feature extraction in Torch<br/>
@@ -145,6 +181,15 @@ scm-0:&nbsp;<a href="gfx.js-scm-0.rockspec">rockspec</a><br/></td></tr>
 </blockquote></a></td>
 <td class="version">
 scm-1:&nbsp;<a href="gm-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
+<p><a name="gnuplot"></a><b>gnuplot</b> - Torch interface to Gnuplot<br/>
+</p><blockquote><p> <br/>
+
+<font size="-1"><a href="git://github.com/torch/gnuplot.git">latest sources</a> | <a href="https://github.com/torch/gnuplot" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="gnuplot-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
 <p><a name="graphicsmagick"></a><b>graphicsmagick</b> - A wrapper to GraphicsMagick (binary).<br/>
@@ -210,6 +255,15 @@ scm-0:&nbsp;<a href="manifold-scm-0.rockspec">rockspec</a><br/></td></tr>
 1.0-0:&nbsp;<a href="mattorch-1.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="nn"></a><b>nn</b> - Neural Network package for Torch<br/>
+</p><blockquote><p> <br/>
+
+<font size="-1"><a href="git://github.com/torch/nn.git">latest sources</a> | <a href="https://github.com/torch/nn" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="nn-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="nnx"></a><b>nnx</b> - A completely unstable and experimental package that extends Torch's builtin nn library<br/>
 </p><blockquote><p>This is an experimental package that extends nn. You've be warned! <br/>
 
@@ -237,6 +291,15 @@ scm-0:&nbsp;<a href="manifold-scm-0.rockspec">rockspec</a><br/></td></tr>
 1.0-0:&nbsp;<a href="parallel-1.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="paths"></a><b>paths</b> - Paths manipulations<br/>
+</p><blockquote><p> <br/>
+
+<font size="-1"><a href="git://github.com/torch/paths.git">latest sources</a> | <a href="https://github.com/torch/paths" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="paths-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="persist"></a><b>persist</b> - A persisting table, built on Redis.<br/>
 </p><blockquote><p>A persisting table, built on Redis. <br/>
 
@@ -255,6 +318,15 @@ scm-0:&nbsp;<a href="persist-scm-0.rockspec">rockspec</a><br/></td></tr>
 scm-0:&nbsp;<a href="python-scm-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="qttorch"></a><b>qttorch</b> - QT interface to Torch<br/>
+</p><blockquote><p> <br/>
+
+<font size="-1"><a href="git://github.com/torch/qttorch.git">latest sources</a> | <a href="https://github.com/torch/qttorch" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="qttorch-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="restclient"></a><b>restclient</b> - A REST Client.<br/>
 </p><blockquote><p>A client to REST APIs. <br/>
 
@@ -262,6 +334,15 @@ scm-0:&nbsp;<a href="python-scm-0.rockspec">rockspec</a><br/></td></tr>
 </blockquote></a></td>
 <td class="version">
 0.1-0:&nbsp;<a href="restclient-0.1-0.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
+<p><a name="sundown"></a><b>sundown</b> - A FFI interface to the Markdown implementation of the Sundown library<br/>
+</p><blockquote><p> <br/>
+
+<font size="-1"><a href="git://github.com/torch/sundown-ffi.git">latest sources</a> | <a href="https://github.com/torch/sundown-ffi" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="sundown-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
 <p><a name="sys"></a><b>sys</b> - A system library for Torch<br/>
@@ -273,13 +354,13 @@ scm-0:&nbsp;<a href="python-scm-0.rockspec">rockspec</a><br/></td></tr>
 1.1-0:&nbsp;<a href="sys-1.1-0.rockspec">rockspec</a><br/>1.0-0:&nbsp;<a href="sys-1.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
-<p><a name="torch"></a><b>torch</b> - Torch<br/>
-</p><blockquote><p>Torch7 provides a Matlab-like environment for state-of-the-art machine learning algorithms. It is easy to use and provides a very efficient implementation, thanks to an easy and fast scripting language (Lua) and a underlying C implementation. <br/>
+<p><a name="torch"></a><b>torch</b> - Torch7<br/>
+</p><blockquote><p> <br/>
 
-<font size="-1"><a href="git://github.com/andresy/torch7-fakerock">latest sources</a> | <a href="http://www.torch.ch" target="_blank">project homepage</a> | License: BSD</font></p>
+<font size="-1"><a href="git://github.com/torch/torch7.git">latest sources</a> | <a href="https://github.com/torch/torch7" target="_blank">project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
-7.scm-0:&nbsp;<a href="torch-7.scm-0.rockspec">rockspec</a><br/></td></tr>
+scm-1:&nbsp;<a href="torch-scm-1.rockspec">rockspec</a><br/>7.scm-0:&nbsp;<a href="torch-7.scm-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
 <p><a name="torchffi"></a><b>torchffi</b> - Enables FFI bindings for Torch<br/>
