added rockspecs for sdl2 & threads

--- a/index.html
+++ b/index.html
@@ -336,6 +336,15 @@ scm-1:&nbsp;<a href="qttorch-scm-1.rockspec">rockspec</a><br/></td></tr>
 0.1-0:&nbsp;<a href="restclient-0.1-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="sdl2"></a><b>sdl2</b> - A FFI interface to SDL2<br/>
+</p><blockquote><p> See <a href="http://libsdl.org" target="_blank">http://libsdl.org</a> for more details. <br/>
+
+<font size="-1"><a href="git://github.com/torch/sdl2-ffi.git">latest sources</a> | <a href="https://github.com/torch/sdl2-ffi" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="sdl2-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="sundown"></a><b>sundown</b> - A FFI interface to the Markdown implementation of the Sundown library<br/>
 </p><blockquote><p> <br/>
 
@@ -352,6 +361,15 @@ scm-1:&nbsp;<a href="sundown-scm-1.rockspec">rockspec</a><br/></td></tr>
 </blockquote></a></td>
 <td class="version">
 1.1-0:&nbsp;<a href="sys-1.1-0.rockspec">rockspec</a><br/>1.0-0:&nbsp;<a href="sys-1.0-0.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
+<p><a name="threads"></a><b>threads</b> - A FFI threading system<br/>
+</p><blockquote><p>A LuaJIT-based theading system. Relies on SDL2 threads for portability. Transparent exchange of data between threads is allowed thanks to torch serialization. <br/>
+
+<font size="-1"><a href="git://github.com/torch/threads-ffi.git">latest sources</a> | <a href="https://github.com/torch/threads-ffi" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="threads-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
 <p><a name="torch"></a><b>torch</b> - Torch7<br/>
