added rockspec for qtlua

--- a/index.html
+++ b/index.html
@@ -321,6 +321,15 @@ scm-0:&nbsp;<a href="persist-scm-0.rockspec">rockspec</a><br/></td></tr>
 scm-0:&nbsp;<a href="python-scm-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="qtlua"></a><a href="#qtlua" class="pkg"><b>qtlua</b></a> - Powerful QT interface to Lua<br/>
+</p><blockquote><p> <br/>
+
+<font size="-1"><a href="git://github.com/torch/qtlua.git">latest sources</a> | <a href="https://github.com/torch/qtlua" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="qtlua-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="qttorch"></a><a href="#qttorch" class="pkg"><b>qttorch</b></a> - QT interface to Torch<br/>
 </p><blockquote><p> <br/>
 
