New script to generate proper templates.

--- a/index.html
+++ b/index.html
@@ -2,53 +2,24 @@
 <html>
 <head>
 <title>Available rocks</title>
-<meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
-<style>
-body {
-   background-color: white;
-   font-family: "bitstream vera sans", "verdana", "sans";
-   font-size: 14px;
-}
-a {
-   color: #0000c0;
-   text-decoration: none;
-}
-a.pkg {
-   color: black;
-}
-a:hover {
-   text-decoration: underline;
-}
-td.main {
-   border-style: none;
-}
-blockquote {
-   font-size: 12px;
-}
-td.package {
-   background-color: #f0f0f0;
-   vertical-align: top;
-}
-td.spacer {
-   height: 5px;
-}
-td.version {
-   background-color: #d0d0d0;
-   vertical-align: top;
-   text-align: left;
-   padding: 5px;
-   width: 100px;
-}
-p.manifest {
-   font-size: 8px;
-}
-</style>
+<meta charset='utf-8' />
+<meta http-equiv="X-UA-Compatible" content="chrome=1" />
+<meta name="description" content="Torch7 : supported packages." />
+<link rel="stylesheet" type="text/css" media="screen" href="http://torch.github.io/stylesheets/stylesheet.css">
 </head>
 <body>
-<h1>Available rocks</h1>
-<p>
-Lua modules available from this location for use with <a href="http://www.luarocks.org">LuaRocks</a>:
-</p>
+    
+<div id="header_wrap" class="outer">
+    <header class="inner">
+      <a id="forkme_banner" href="https://github.com/torch/rocks">Add your own rocks here!</a>
+      <h1 id="project_title">Rocks</h1>
+      <h2 id="project_tagline">Hosted @ github.com/torch/rocks</h2>
+    </header>
+</div>
+    
+<div id="main_content_wrap" class="outer">
+<section id="main_content" class="inner">
+
 <table class="main">
 <td class="package">
 <p><a name="async"></a><a href="#async" class="pkg"><b>async</b></a> - An async framework for Torch (based on LibUV)<br/>
@@ -456,10 +427,8 @@ scm-1:&nbsp;<a href="utf8-scm-1.rockspec">rockspec</a><br/></td></tr>
 1.0-0:&nbsp;<a href="xlua-1.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 </table>
-<p class="manifest">
-<a href="manifest">manifest file</a>
-&bull; <a href="manifest-5.1">Lua 5.1 manifest file</a> (<a href="manifest-5.1.zip">zip</a>) 
-&bull; <a href="manifest-5.2">Lua 5.2 manifest file</a> (<a href="manifest-5.2.zip">zip</a>) 
-</p>
+
+</section>
+</div>
 </body>
 </html>
