--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@ scm-1:&nbsp;<a href="async-scm-1.rockspec">rockspec</a><br/></td></tr>
 0.1-0:&nbsp;<a href="audio-0.1-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="buffer"></a><a href="#buffer" class="pkg"><b>buffer</b></a> - A buffer object for LuaJIT<br/>
+</p><blockquote><p>A buffer object for LuaJIT <br/>
+
+<font size="-1"><a href="git://github.com/clementfarabet/buffer">latest sources</a> | <a href="https://github.com/clementfarabet/buffer" target="_blank">project homepage</a> | License: Apache</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-0:&nbsp;<a href="buffer-scm-0.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="camera"></a><a href="#camera" class="pkg"><b>camera</b></a> - A simple wrapper package to give torch access to a webcam<br/>
 </p><blockquote><p>Uses OpenCV on MacOS and video4linux2 on Linux to proved the low level access to the camera hardware. <br/>
 
