--- a/index.html
+++ b/index.html
@@ -319,6 +319,24 @@ scm-1:&nbsp;<a href="qtlua-scm-1.rockspec">rockspec</a><br/></td></tr>
 scm-1:&nbsp;<a href="qttorch-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="redis-async"></a><b>redis-async</b> - A redis client built off the torch/lua async framework<br/>
+</p><blockquote><p>A redis client built off the torch/lua async framework <br/>
+
+<font size="-1"><a href="git://github.com/ocallaco/redis-async">latest sources</a> | <a href="https://github.com/ocallaco/redis-async" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-0:&nbsp;<a href="redis-async-scm-0.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
+<p><a name="redis-queue"></a><b>redis-queue</b> - A redis queue framework using async redis<br/>
+</p><blockquote><p>A redis queue framework using async redis <br/>
+
+<font size="-1"><a href="git://github.com/ocallaco/redis-queue">latest sources</a> | <a href="https://github.com/ocallaco/redis-queue" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-0:&nbsp;<a href="redis-queue-scm-0.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="restclient"></a><b>restclient</b> - A REST Client.<br/>
 </p><blockquote><p>A client to REST APIs. <br/>
 
