--- a/index.html
+++ b/index.html
@@ -319,6 +319,15 @@ scm-1:&nbsp;<a href="qtlua-scm-1.rockspec">rockspec</a><br/></td></tr>
 scm-1:&nbsp;<a href="qttorch-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="randomkit"></a><b>randomkit</b> - Numpy's randomkit, wrapped for Torch<br/>
+</p><blockquote><p><br/>
+
+<font size="-1"><a href="git://github.com/jucor/torch-randomkit.git">latest sources</a> | <a href="https://jucor.github.io/torch-randomkit" target="_blank">project homepage</a> | License: N/A</font></p>
+</blockquote></a></td>
+<td class="version">
+0-0:&nbsp;<a href="randomkit-0-0.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="redis-async"></a><b>redis-async</b> - A redis client built off the torch/lua async framework<br/>
 </p><blockquote><p>A redis client built off the torch/lua async framework <br/>
 
